# brkraw-hook

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/brkraw_hook_template/: __init__.py  brkraw_hook.yaml  hook.py
src/brkraw_hook_template/docs/: hook.md  rule_spec_transform.md
src/brkraw_hook_template/rules/: template_rule.yaml
src/brkraw_hook_template/specs/: info_template.yaml  metadata_template.yaml
src/brkraw_hook_template/transforms/: __init__.py  template.py
tests/: test_hook_install.py
